--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -133,7 +133,7 @@
 
                             <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
 
-                            <md-button aria-label="Move To Draft" style="margin-left: 10px;" md-theme="none" class="md-fab md-button-fab-small"
+                            <md-button aria-label="Move To Draft" style="margin-left: 10px;" md-theme="default" class="md-fab md-button-fab-small"
                                        ng-click="vm.moveScheduleRowToDraft(item); $event.stopPropagation();">
                                 <span class="fa fa-chevron-up"></span>
                                 <md-tooltip>
@@ -160,7 +160,7 @@
                             </md-button>
 
 
-                            <md-button aria-label="Move Schedule To Finished" md-theme="none" style="margin-left: 10px;" class="md-fab md-button-fab-small"
+                            <md-button aria-label="Move Schedule To Finished" md-theme="default" style="margin-left: 10px;" class="md-fab md-button-fab-small"
                                        ng-click="vm.moveScheduleRowToFinished(item); $event.stopPropagation();">
                                 <span class="fa fa-chevron-down"></span>
                                 <md-tooltip>
@@ -232,7 +232,7 @@
 
                             <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
 
-                            <md-button aria-label="Clone To Draft" style="margin-left: 10px;" md-theme="none" class="md-fab md-button-fab-small"
+                            <md-button aria-label="Clone To Draft" style="margin-left: 10px;" md-theme="default" class="md-fab md-button-fab-small"
                                        ng-click="vm.cloneSchedule(item); $event.stopPropagation();">
                                 <span class="fa fa-copy"></span>
                                 <md-tooltip>
