--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,36 +1,104 @@
-<div flex layout="row" style="min-width: 1515px; min-height: 850px; margin: 16px;" ng-controller="SubArrayResourcesCtrl as vm">
+<div flex layout="row" style="min-width: 1015px; min-height: 920px;" ng-controller="SubArrayResourcesCtrl as vm">
 
-    <div flex layout="column" layout-padding>
+    <div flex layout="column" style="overflow: auto; padding: 16px;">
         <div ng-repeat="subarray in vm.subarrays track by subarray.id" class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start"
-             md-theme="{{subarray.state === 'free'? 'teal' : subarray.state === 'inUse'? 'amber' : 'deep-purple'}}">
+             style="min-width: 650px;"
+             md-theme="{{subarray.state === 'free'? 'green' : subarray.state === 'inUse'? 'amber' : 'deep-purple'}}">
 
-            <md-toolbar class="subarray-item md-whiteframe-z1" layout="column" layout-align="start center" title="{{::subarray.description}}">
-                <h2>Sub-Array {{::subarray.id}}</h2>
+            <md-toolbar class="subarray-item md-whiteframe-z1 md-hue-2" layout="column" layout-align="start center" title="{{subarray.description}}">
+                <md-button class="md-fab md-primary" md-theme="{{themePrimaryButtons}}" style="position: absolute; margin-left: -12px; margin-top: 8px;"
+                           ng-click="vm.removeSubarray(subarray)" aria-label="Remove Subarray">
+                    <span class="fa fa-minus"></span>
+                    <md-tooltip>Remove Sub-Array</md-tooltip>
+                </md-button>
+
+                <h2>Sub-Array {{subarray.id}}</h2>
 
                 <div ng-include="'images/subarray.svg'"></div>
-                <span>{{::subarray.state}}</span>
+                <span>{{subarray.state}}</span>
             </md-toolbar>
 
-            <div class="md-whiteframe-z1" style="margin-left: 2px;" layout="column" flex>
-                <md-toolbar class="md-whiteframe-z1">
-                    <div layout="row" class="unselectable md-toolbar-tools-small">
+            <div class="md-whiteframe-z1" style="margin-left: 2px;" layout="column" layout-align="start" flex>
+
+                <md-toolbar class="md-whiteframe-z1 md-hue-2">
+                    <div layout="row" class="unselectable md-toolbar-tools">
                         <span flex>Resources Assigned to Sub-array</span>
                     </div>
 
                 </md-toolbar>
-                <div flex ng-repeat="resource in vm.subarray.poolResources">
-                    <span flex>{{resource}}</span>
+                <div flex style="overflow: auto;">
+                    <!--<div flex ng-if="poolResources.length === 0">-->
+                        <!--<span>No Resources Assigned</span>-->
+                    <!--</div>-->
+                    <div flex class="resource-item animate-repeat-40" layout="row" layout-align="start center"
+                         ng-repeat="resource in vm.poolResources | filter:{sub_nr:subarray.id}">
+                        <span flex style="font-size:14px">{{resource.name}}</span>
+                        <md-button ng-click="vm.freeAssignedResource(subarray, resource)" style="height:38px; width:38px;" aria-label="Free Resource"
+                                   title="Free Assigned Resource">
+                            <span class="fa fa-minus md-fab-fa-icon-small"></span>
+                        </md-button>
+                    </div>
+                </div>
+            </div>
+
+            <md-button md-theme="{{themePrimaryButtons}}" style="min-height: 100%; width: 49px; margin-left: 4px;"
+                       aria-label="Assign Resources" class="md-raised md-primary"
+                       ng-click="vm.assignSelectedResources(subarray);" title="Assign Resources to Sub-Array">
+                <span class="fa fa-chevron-left md-fab-fa-icon-small"></span>
+            </md-button>
+        </div>
+        <md-button class="md-fab md-primary" md-theme="{{themePrimaryButtons}}" style="margin: auto; min-height: 56px;"
+                   ng-click="vm.createSubarray()" title="Create Sub-Array" aria-label="Create Subarray">
+            <span class="fa fa-plus"></span>
+        </md-button>
+    </div>
+
+    <div flex layout="column" style="max-width:500px; min-height: 600px; margin-left:8px; margin-right: 16px; margin-bottom: 16px;">
+
+        <div flex layout="column" class="md-whiteframe-z1" style="margin-bottom: 8px;">
+            <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center" title="">
+                <span flex class="md-toolbar-tools">Free Resources</span>
+            </md-toolbar>
+
+            <div flex style="overflow: auto">
+                <div class="resource-item animate-repeat-40" layout="column" layout-align="center start"
+                     ng-repeat="resource in filteredResources = (vm.poolResourcesFree | filter:{state: 'ok'} | orderBy:'name')"
+                     ng-class="{'selected-resource-item': resource.selected}"
+                     ng-click="resource.selected = !resource.selected;">
+                    <span style="font-size:18px">{{resource.name}}</span>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div flex layout="column" style="max-width:500px;">
+        <div flex layout="column" class="md-whiteframe-z1" style="margin-bottom: 8px;">
+            <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center">
+                <span flex class="md-toolbar-tools">Maintenance Resources</span>
+            </md-toolbar>
 
-        <span>vm.poolResourcesFree</span>
-        <span>{{vm.poolResourcesFree | json}}</span>
-        <!--<span>allocations</span>-->
-        <!--<span>{{vm.allocations | json}}</span>-->
+            <div style="overflow: auto;">
+                <div class="resource-item animate-repeat-40" layout="column" layout-align="center start"
+                     ng-repeat="resource in filteredResources = (vm.poolResourcesFree | filter:{state: 'maintenance'} | orderBy:'name')"
+                     <!--ng-class="{'selected-resource-item': resource.selected}"-->
+                     <!--ng-click="resource.selected = !resource.selected;">-->
+                    <span style="font-size:18px">{{resource.name}}</span>
+                </div>
+            </div>
+        </div>
+
+        <div flex layout="column" class="md-whiteframe-z1">
+            <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center">
+                <span flex class="md-toolbar-tools">Faulty Resources</span>
+            </md-toolbar>
+
+            <div style="overflow: auto;">
+                <div class="resource-item animate-repeat-40" layout="column" layout-align="center start"
+                     ng-repeat="resource in filteredResources = (vm.poolResourcesFree | filter:{state: 'faulty'} | orderBy:'name')"
+                     <!--ng-class="{'selected-resource-item': resource.selected}"-->
+                     <!--ng-click="resource.selected = !resource.selected;">-->
+                    <span style="font-size:18px">{{resource.name}}</span>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
