--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,7 +1,7 @@
 <div flex layout="row" style="min-width: 1015px; min-height: 920px;" ng-controller="SubArrayResourcesCtrl as vm">
 
     <div flex layout="column" style="overflow: auto; padding: 16px;">
-        <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start"
+        <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
              style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false"
              md-theme="{{subarray.state === 'free'? 'green' : subarray.state === 'in_use'? 'amber' : 'deep-purple'}}">
 
@@ -39,7 +39,7 @@
                 <span ng-if="subarray.in_maintenance">{{subarray.state}} - in maintenance</span>
             </div>
 
-            <div class="md-whiteframe-z1" style="margin-left: 2px;" layout="column" layout-align="start" flex>
+            <div class="" style="margin-left: 0px;" layout="column" layout-align="start" flex>
 
                 <md-toolbar class="md-whiteframe-z1 md-hue-2">
                     <div layout="row" class="unselectable md-toolbar-tools">
@@ -54,7 +54,7 @@
                     </div>
 
                 </md-toolbar>
-                <div flex style="overflow: auto;">
+                <div flex style="overflow: auto; border-left: 1px solid #d3d3d3; border-right: 1px solid #d3d3d3">
                     <!--<div flex ng-if="poolResources.length === 0">-->
                     <!--<span>No Resources Assigned</span>-->
                     <!--</div>-->
@@ -86,7 +86,7 @@
         <!--</md-button>-->
     </div>
 
-    <div flex layout="column" style="max-width:500px; min-height: 600px; margin-left:8px; margin-right: 16px; margin-bottom: 16px;">
+    <div flex layout="column" style="max-width:300px; min-height: 600px; margin-left:8px; margin-right: 16px; margin-bottom: 16px;">
 
         <div flex layout="column" class="md-whiteframe-z1" style="margin-bottom: 8px;">
             <md-toolbar class="md-whiteframe-z1" layout="column" layout-align="start center" title="">
@@ -102,11 +102,11 @@
                     <span class="fa fa-wrench" ng-if="resource.in_maintenance" title="Resource in Maintenance" style="font-size: 18px; margin-left: 4px;"
                           ng-class="{'error-text':resource.state === 'faulty'}"></span>
                     <span flex style="font-size:18px; margin-left: 4px;" ng-class="{'error-text':resource.state === 'faulty'}">{{resource.name}}</span>
-                    <md-button ng-click="vm.markResourceFaulty(resource)" style="height:38px; width:38px;" aria-label="Mark Resource Faulty"
+                    <md-button ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()" style="height:38px; width:38px;" aria-label="Mark Resource Faulty"
                                title="Mark Resource As Faulty">
                         <span class="fa fa-exclamation-circle md-fab-fa-icon-small"></span>
                     </md-button>
-                    <md-button ng-click="vm.markResourceInMaintenance(resource)" style="height:38px; width:38px;" aria-label="Mark Resource in Maintenance"
+                    <md-button ng-click="vm.markResourceInMaintenance(resource); $event.stopPropagation()" style="height:38px; width:38px;" aria-label="Mark Resource in Maintenance"
                                title="Mark Resource in Maintenance">
                         <span class="fa fa-wrench md-fab-fa-icon-small"></span>
                     </md-button>
